--- a/src/pug/1-0data-center.pug
+++ b/src/pug/1-0data-center.pug
@@ -52,7 +52,7 @@ block content
 						span.link-value ...
 						span.link-i-arrow
 							+icon('arrow_down')
-					+link-navigation(['Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости', 'Галерея'])
+					+link-navigation(['О Дата-центре','Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости', 'Галерея'])
 			.content-inner
 				h2.h2.content-inner__title.fade-up ЦОД обеспечен двумя независимыми оптическими подключениями, что гарантирует доступность каналов связи
 				.datacenter-characteristics.datacenter-characteristics_data.fade-down
