--- a/src/pug/includes/_footer.pug
+++ b/src/pug/includes/_footer.pug
@@ -77,5 +77,5 @@ include _mixins.pug
 				span.text-small &copy; 2017, Унитарное предприятие «Велком».
 			.footer-copyright__map
 				a.text-small(href="#") Карта сайта
-				span.text-small.site-dev Разработка сайта:&nbsp;
+				span.text-small.site-dev Разработка сайта:&#32;
 					a(href="#") FLEX.MEDIA
