--- a/src/sass/_inputs.sass
+++ b/src/sass/_inputs.sass
@@ -160,6 +160,7 @@
 		border: 1px solid #cccccc
 		margin-right: -1px
 		margin-bottom: -1px
+		background-color: #f5f5f5
 		+tr(all .3s ease)
 		&:hover
 			cursor: pointer
@@ -257,6 +258,10 @@
 	& ~ .input-label
 		color: #d1d1d1
 		pointer-events: none
+	&.radio-wrapper
+		.radio-label
+			color: #d1d1d1
+
 .help-block.form-error
 	font-size: 12px
 	color: #ed1c24
