--- a/src/sass/lib/_variables.sass
+++ b/src/sass/lib/_variables.sass
@@ -1,37 +1,7 @@
 // font variables
-$o: 'Arial'
+$o: 'Arial', sans-serif
 
 // color variables
 $main-decor-color: #fff233
 
-$svg-green: hsl(212, 100%, 36%)
-$svg-blue: hsl(99, 69%, 42%)
-
-$white: hsl(0, 0%, 100%)
-$blk: hsl(0, 0%, 20%)
-
-//texts
-$text: hsl(0, 0%, 20%)
-$text-gray: hsl(100, 1%, 60%)
-$text-light-gray: hsl(100, 7%, 74%)
-$text-annotation: hsl(92, 7%, 44%)
-$text-h: hsl(92, 9%, 28%)
-$text-darker: hsl(0, 0%, 7%)
-
-//state
-$green: hsl(99, 69%, 42%)
-$active: hsl(212, 100%, 36%)
-
-//border
-$sidestep: 32px
-$topstep: 46px
-$lineColor: hsl(0, 0%, 80%)
-$gray: hsl(180, 5%, 96%)
-
-//placeholder inputs
-//color bg
-$green-place: hsl(99, 67%, 23%)
-
-//table
-// timing
 $t1: cubic-bezier(0, 1.02, 0.35, 0.99)
