--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -147,7 +147,7 @@ footer
 
 .footer-links
 	padding-top: 66px
-	padding-bottom: 122px
+	padding-bottom: 110px
 	background-color: #f4f4f4
 	+r(980)
 		padding-bottom: 45px
@@ -156,24 +156,30 @@ footer
 	padding-bottom: 50px
 
 .footer-services
-	padding-bottom: 50px
+	padding-bottom: 35px
 	&__list
 		display: flex
 		justify-content: space-between
+		align-items: center
 		max-width: 61rem
 	&__item
 		display: inline-block
 		max-width: 155px
+		margin-right: 10px
 		&:last-child
 			margin-right: 0
 	&__link
+		display: inline-block
+		vertical-align: middle
 		font-size: 14px
 		font-weight: bold
 		color: #000000
 		+tr(color .3s ease)
 		img
-			max-width: 20px
-			margin-right: 13px
+			max-width: 40px
+			margin-right: 8px
+			display: inline-block
+			vertical-align: middle
 		&:hover
 			color: #ecdc00
 
@@ -187,14 +193,13 @@ footer
 			margin-bottom: 16px
 	+r(620)
 		&__item
-			width: 50%
+			width: 48%
+			&:nth-child(even)
+				margin-right: 0
 		&__link
 			img
-				margin-right: 8px
-	+r(350)
-		&__item
-			width: 100%;
-	
+				max-width: 20px
+				margin-right: 5px
 
 .footer-partners
 	&__link
@@ -224,12 +229,12 @@ footer
 	&__map
 		display: flex
 		width: 50%
+
 		a
 			+tr(color .3s ease)
 			&:hover
 				color: #000000
-
-	+r(680)
+	+r(768)
 		&__item
 			width: 100%
 			margin-bottom: 22px
@@ -238,8 +243,8 @@ footer
 
 
 .site-dev
-	margin-right: 0
 	margin-left: auto
+	padding-left: 20px
 	+tr(color .3s ease)
 	&:hover
 		color: #000000
