--- a/src/sass/_repeat_block.sass
+++ b/src/sass/_repeat_block.sass
@@ -392,7 +392,7 @@ blockquote
 		+tr(all .3s ease)
 	&__desc
 		width: 100%
-		margin-bottom: 60px
+		margin-bottom: 70px
 	&__link
 		position: absolute
 		bottom: 33px
@@ -430,6 +430,8 @@ blockquote
 		&__link
 			bottom: 33px
 			left: 25px
+	+r(350)
+		padding: 25px 20px 25px 20px
 
 .datacenter-characteristics
 	display: flex
@@ -1323,6 +1325,69 @@ blockquote
 		left: 0
 .inner-slider__prev
 	transform: rotate(180deg)
+
+.tabs-head
+	padding: 0 34px
+	margin-bottom: 25px
+.tabs-cont
+	display: none
+.tabs-item
+	display: inline-block
+	padding: 10px 15px
+	border: 1px solid #cccccc
+	margin-right: -1px
+	margin-bottom: -1px
+	font-size: 16px
+	+tr(all .3s ease)
+	&:first-child
+		border-top-left-radius: 5px
+		border-bottom-left-radius: 5px
+	&:last-child
+		border-top-right-radius: 5px
+		border-bottom-right-radius: 5px
+	&:hover
+		cursor: pointer
+		background-color: #ffffff
+	&:hover &__custom
+		background-color: #f5f5f5
+	&__text
+		display: inline-block
+		vertical-align: middle
+	&__custom
+		display: inline-block
+		vertical-align: middle
+		width: 18px
+		height: 18px
+		border: 1px solidcccccc
+		background-color: #ffffff
+		border: 1px solid transparent
+		border-radius: 50%
+		box-shadow: inset 0px 2px 10px 0px rgba(0, 0, 0, 0.13)
+		margin-right: 15px
+		position: relative
+		+tr(all .3s ease)
+	&__check
+		display: block
+		width: 10px
+		height: 10px
+		border-radius: 50%
+		position: absolute
+		top: 50%
+		left: 50%
+		transform: translate(-50%, -50%)
+		background-color: #f2db00
+		background-image: linear-gradient(#fcf728 0%, #e9c305 100%)
+		opacity: 0
+		+tr(all .3s ease)
+	&.active
+		background-color: #fdfcd5
+		border-color: #cdc115
+		.tabs-item__custom
+			background-color: #ffffff
+			box-shadow: none
+			border-color: #cdc115
+		.tabs-item__check
+			opacity: 1
 
 
 /* animated block*/
