--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -48,8 +48,7 @@
 	background-color: #ffffff
 	position: relative
 	+tr(opacity .2s)
-	opacity: 0
-
+	opacity: 0s
 	&-content
 		padding: 10px
 		text-align: left
