--- a/src/pug/0-0index.pug
+++ b/src/pug/0-0index.pug
@@ -21,7 +21,7 @@ block content
 					.promo-reclame__item
 						.promo-reclame__body
 							.promo-reclame__icon
-								<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 49 63"><defs><clipPath id="a"><path fill="none" d="M9.2 5l3.3 3.2v3.2H9.2L6 8.2 9.2 5z"/></clipPath></defs><path fill="#fff233" d="M40.5 5H48v57H5v-3.5H4V63h45V4h-8.5z"/><path fill="#fff" d="M22 18h17v-1H22m0 4.3h17v-1H22m0 4.4h9v-1h-9M7 53.5v-15H6v15m5 0v-10h-1v10m5 0v-19h-1v19m5 0v-13h-1v13m5 0v-17h-1v17m5 0v-11h-1v11m5 0v-13h-1v13m5 0v-20h-1v20m5 0v-17h-1v17"/><path fill="#fff" d="M36.7 0H0v59h45V8.3zm.3 1.7L43.3 8H37zM1 58V1h35v8h8v49z"/><g clip-path="url(#a)"><path fill="#fff500" d="M15.7 5l3.2 3.2-3.2 3.2h-3.2V8.2z"/><path fill="#e0d900" d="M9.22 11.39l3.25-3.25 3.25 3.25-3.25 3.25z"/></g></svg>
+								<svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 49 63"><path fill="#fff233" d="M40.5 5H48v57H5v-3.5H4V63h45V4h-8.5v1z"/><path fill="#fff" d="M22 18h17v-1H22M22 21.3h17v-1H22M22 24.7h9v-1h-9M7 53.5v-15H6v15M11 53.5v-10h-1v10M15 53.5v-19h-1v19M19 53.5v-13h-1v13M23 53.5v-17h-1v17M27 53.5v-11h-1v11M31 53.5v-13h-1v13M35 53.5v-20h-1v20M39 53.5v-17h-1v17"/><path d="M36.7 0H0v59h45V8.3zm.3 1.7L43.3 8H37zM1 58V1h35v8h8v49z" fill="#fff"/><path fill="#e0d900" d="M9.22665835 11.48996429l3.2526912-3.2526912 3.25269119 3.2526912-3.2526912 3.25269119z"/><path fill="#fff84c" d="M6.05996175 8.23632468l3.2526912-3.2526912 3.25269119 3.2526912-3.2526912 3.25269119z"/><path fill="#fff500" d="M12.48130301 8.18841487l3.2526912-3.2526912 3.25269119 3.2526912-3.2526912 3.2526912z"/></svg>
 							p.text-primary.promo-reclame__text Гарантированно высокие параметры SLA
 					.promo-reclame__item
 						.promo-reclame__body
