--- a/src/sass/_inputs.sass
+++ b/src/sass/_inputs.sass
@@ -23,8 +23,8 @@
 		width: 100%
 		height: 1px
 		background-color: #cccccc
-		margin-top: 20px
-		margin-bottom: 34px
+		margin-top: 20px !important
+		margin-bottom: 34px !important
 .input
 	&-row
 		font-size: 0
@@ -43,6 +43,7 @@
 				width: 100%
 	&-wrapper
 		position: relative
+		+tr(all .5s linear)
 		.select-check
 			width: 100%
 		.select-carret
@@ -61,6 +62,9 @@
 			.dropdown-inner
 				border: 2px solid #000000
 				border-top: 1px solid #ccc
+		&.has-error
+			margin-bottom: 20px
+
 	&-main
 		display: block
 		width: 100%
@@ -153,13 +157,13 @@
 				border-color: #cdc115
 			.radio-label__check
 				opacity: 1
-
 	&-label
 		display: inline-block
 		padding: 10px 15px
 		border: 1px solid #cccccc
 		margin-right: -1px
 		margin-bottom: -1px
+		min-width: 113px
 		background-color: #f5f5f5
 		+tr(all .3s ease)
 		&:hover
@@ -258,6 +262,10 @@
 	& ~ .input-label
 		color: #d1d1d1
 		pointer-events: none
+	& ~ .input-counter-nav
+		pointer-events: none
+		button
+			color: #d1d1d1
 	&.radio-wrapper
 		.radio-label
 			color: #d1d1d1
@@ -265,7 +273,9 @@
 .help-block.form-error
 	font-size: 12px
 	color: #ed1c24
-	padding: 5px 0
+	position: absolute
+	bottom: -20px
+	left: 0
 
 .button-submit
 	font-size: 16px
