--- a/src/sass/_repeat_block.sass
+++ b/src/sass/_repeat_block.sass
@@ -1333,7 +1333,7 @@ blockquote
 	display: none
 .tabs-item
 	display: inline-block
-	padding: 10px 15px
+	padding: 10px 20px 10px 10px
 	border: 1px solid #cccccc
 	margin-right: -1px
 	margin-bottom: -1px
@@ -1363,7 +1363,7 @@ blockquote
 		border: 1px solid transparent
 		border-radius: 50%
 		box-shadow: inset 0px 2px 10px 0px rgba(0, 0, 0, 0.13)
-		margin-right: 15px
+		margin-right: 12px
 		position: relative
 		+tr(all .3s ease)
 	&__check
